favorite table error fix
